DRT-4562 increase timeline width to add whitespace, fix unit error

--- a/server/src/main/assets/stylesheets/main.less
+++ b/server/src/main/assets/stylesheets/main.less
@@ -21,7 +21,7 @@
 @dotDiameter: 24px;
 
 .timeline-column {
-  width: 300px;
+  width: 324px;
   height: @dotDiameter;
 }
 
